fixed references from Dixon model to Lesne model to match paper

--- a/G&F2014redo.ipynb
+++ b/G&F2014redo.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "6a9a8f40-c207-43f3-842a-519777811bbe",
    "metadata": {},
    "outputs": [
@@ -409,19 +409,19 @@
        "4  0.236740  3.260124  0.781527"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "XDixon3 = amph_chem[['K/Vac+Na','Mg','FeM']]\n",
-    "XDixon3.head()"
+    "XLesne3 = amph_chem[['K/Vac+Na','Mg','FeM']]\n",
+    "XLesne3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "1e14228d-f694-4707-8d3d-586f695b20b1",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,30 +443,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "06a8615f-f6fc-4f12-8110-f40a4fcb9983",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<statsmodels.regression.linear_model.RegressionResultsWrapper at 0x7f30c7ed2fd0>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X1 = sm.add_constant(XDixon3)\n",
-    "Dix3_model = sm.OLS(y,X1)\n",
-    "Dix3_results = Dix3_model.fit()"
+    "X1 = sm.add_constant(XLesne3)\n",
+    "Lesne3_model = sm.OLS(y,X1)\n",
+    "Lesne3_results = Lesne3_model.fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "757a395e-3b88-4b4f-bce7-f2a6123cbdff",
    "metadata": {},
    "outputs": [
@@ -488,7 +477,7 @@
        "  <th>Date:</th>             <td>Tue, 05 Apr 2022</td> <th>  Prob (F-statistic):</th> <td>2.65e-09</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:42:11</td>     <th>  Log-Likelihood:    </th> <td> -10.638</td>\n",
+       "  <th>Time:</th>                 <td>19:43:50</td>     <th>  Log-Likelihood:    </th> <td> -10.638</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    39</td>      <th>  AIC:               </th> <td>   29.28</td>\n",
@@ -544,7 +533,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.676\n",
        "Method:                 Least Squares   F-statistic:                     27.41\n",
        "Date:                Tue, 05 Apr 2022   Prob (F-statistic):           2.65e-09\n",
-       "Time:                        17:42:11   Log-Likelihood:                -10.638\n",
+       "Time:                        19:43:50   Log-Likelihood:                -10.638\n",
        "No. Observations:                  39   AIC:                             29.28\n",
        "Df Residuals:                      35   BIC:                             35.93\n",
        "Df Model:                           3                                         \n",
@@ -568,18 +557,18 @@
        "\"\"\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Dix3_results.summary()"
+    "Lesne3_results.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "54b6c31e-d925-4193-a3b2-ecf590a638e1",
    "metadata": {},
    "outputs": [
@@ -601,7 +590,7 @@
        "  <th>Date:</th>             <td>Tue, 05 Apr 2022</td> <th>  Prob (F-statistic):</th>          <td>8.04e-11</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:43:21</td>     <th>  Log-Likelihood:    </th>          <td> -15.354</td>\n",
+       "  <th>Time:</th>                 <td>19:43:50</td>     <th>  Log-Likelihood:    </th>          <td> -15.354</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    39</td>      <th>  AIC:               </th>          <td>   36.71</td>\n",
@@ -654,7 +643,7 @@
        "Model:                            OLS   Adj. R-squared (uncentered):              0.725\n",
        "Method:                 Least Squares   F-statistic:                              35.31\n",
        "Date:                Tue, 05 Apr 2022   Prob (F-statistic):                    8.04e-11\n",
-       "Time:                        17:43:21   Log-Likelihood:                         -15.354\n",
+       "Time:                        19:43:50   Log-Likelihood:                         -15.354\n",
        "No. Observations:                  39   AIC:                                      36.71\n",
        "Df Residuals:                      36   BIC:                                      41.70\n",
        "Df Model:                           3                                                  \n",
@@ -678,15 +667,15 @@
        "\"\"\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Dix3_model_noc = sm.OLS(y,XDixon3)\n",
-    "Dix3_results_noc = Dix3_model_noc.fit()\n",
-    "Dix3_results_noc.summary()"
+    "Lesne3_model_noc = sm.OLS(y,XLesne3)\n",
+    "Lesne3_results_noc = Lesne3_model_noc.fit()\n",
+    "Lesne3_results_noc.summary()"
    ]
   },
   {
