rounded off evaluation of old data

--- a/G&F2014redo.ipynb
+++ b/G&F2014redo.ipynb
@@ -1075,6 +1075,35 @@
     "with open('2014data_models_noconst.pkl','wb') as cellar:\n",
     "    pickle.dump(best_fitted_models_noc,cellar)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63c66d57-acff-42dc-8dd0-18b2b4730bf0",
+   "metadata": {},
+   "source": [
+    "#### Discussion\n",
+    "I have finally made an initial attempt to chase down the theory behind including and not including a y-intercept term in the regressions (https://stats.stackexchange.com/questions/7948/when-is-it-ok-to-remove-the-intercept-in-a-linear-regression-model, https://stats.stackexchange.com/questions/26176/removal-of-statistically-significant-intercept-term-increases-r2-in-linear-mo/26205#26205) and suspect that it was problematic of me to publish the model with no intercept (on top of the fact that obviously I did not find the optimal model!).\n",
+    "\n",
+    "For it to be legitimate to remove the intercept, it would seem that as the logarithm of the partitioning reaction constant would go to zero--where the numerator and denominator of the reaction quotient are equal, a believable chemical circumstance--when the features all go to zero, and in pretty much any of these regressions that latter would be very odd geochemistry.\n",
+    "\n",
+    "In the models with no intercept, there are large score increases going from 2 to 3 to 4 features, and less gain after that. Further, the 5 feature model introduces the estimated water fugacity, which would be tedious and questionable to include on multiple grounds. The 4 feature regression has some strange features, though. K/(Na+[]) is positive, as expected; Mg# is negative, as expected, for the reasons adduced in the paper. Divalent / (trivalent + tetravalent) cations on the M site appears with a positive coefficient and this is a bit odd. What this feature \"should\" affect is disfavoring O in place of OH, F, Cl rather than favoring Cl over OH, except insofar as Fe is mostly divalent and therefore is a hidden variable behind Di/Hi. Then there's Al on the M site and that's got a positive coefficient, too, even though it \"should\" affect things in the opposite manner to Di/Hi, _favoring_ O in place of the monovalent anions and, again, leaving Cl/OH more or less unchanged.\n",
+    "\n",
+    "In the models with an intercept, probably the more legitimate ones, there is likewise an argument for stopping at 4 features. At 5 features, there are now terms for K/(Na+[]), [], and Na, and they are all positive, which is fairly senseless as they are all competing with each other over bulk lattice size as discussed in the paper. At 4 features we have a large positive contribution from K/(Na+[]), a small one from [], a large negative one from Mg#, and the only odd thing is that Al on the M site shows up again with a positive coefficient as discussed above.\n",
+    "\n",
+    "It would be a mistake to try to push crystal chemical interpretations at all far on this miserable little dataset, and likewise for trying to engineer the regressions with things like polynomial features, so here I shall leave it. Anyone choosing to work on the problem would need to look to the synthetic data that has been published since this paper came out.\n",
+    "\n",
+    "Paul Giesting\n",
+    "\n",
+    "May 2022"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce0c092a-1dd4-4229-9ed0-eac6b5b2d783",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1093,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
